--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -710,7 +710,7 @@
   "Sorry, an error occurred saving the collection": "Sorry, an error occurred saving the collection",
   "Add a description": "Add a description",
   "Signing in": "Signing in",
-  "You can safely close this window once the Outline desktop app has opened": "You can safely close this window once the Outline desktop app has opened",
+  "You can safely close this window once the Outline desktop app has opened": "You can safely close this window once the IMC KMS desktop app has opened",
   "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
   "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
   "{{ count }} changes": "{{ count }} change",
@@ -933,7 +933,7 @@
   "Check the network requests and server logs for full details of the error.": "Check the network requests and server logs for full details of the error.",
   "Custom domain setup": "Custom domain setup",
   "Almost there": "Almost there",
-  "Your custom domain is successfully pointing at Outline. To complete the setup process please contact support.": "Your custom domain is successfully pointing at Outline. To complete the setup process please contact support.",
+  "Your custom domain is successfully pointing at Outline. To complete the setup process please contact support.": "Your custom domain is successfully pointing at IMC KMS. To complete the setup process please contact support.",
   "Choose workspace": "Choose workspace",
   "This login method requires choosing your workspace to continue": "This login method requires choosing your workspace to continue",
   "Check your email": "Check your email",
@@ -1013,7 +1013,7 @@
   "Where users are redirected after authorizing this app": "Where users are redirected after authorizing this app",
   "Authorization URL": "Authorization URL",
   "Where users are redirected to authorize this app": "Where users are redirected to authorize this app",
-  "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.",
+  "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Applications allow you to build internal or public integrations with IMC KMS and provide secure access via OAuth. For more details see the <em>developer documentation</em>.",
   "Settings saved": "Settings saved",
   "Are you sure?": "Are you sure?",
   "Removing": "Removing",
@@ -1102,7 +1102,7 @@
   "Canceling this import will discard any progress made. This cannot be undone.": "Canceling this import will discard any progress made. This cannot be undone.",
   "{{ count }} document imported": "{{ count }} document imported",
   "{{ count }} document imported_plural": "{{ count }} documents imported",
-  "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.",
+  "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "You can import a zip file that was previously exported from an IMC KMS installation – collections, documents, and images will be imported. In IMC KMS, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload",
   "Configure": "Configure",
   "Last active": "Last active",
@@ -1386,7 +1386,7 @@
   "Disconnecting your personal account will prevent searching for documents from Slack. Are you sure?": "Disconnecting your personal account will prevent searching for documents from Slack. Are you sure?",
   "Slash command": "Slash command",
   "Get rich previews of {{ appName }} links shared in Slack and use the <em>{{ command }}</em> slash command to search for documents without leaving your chat.": "Get rich previews of {{ appName }} links shared in Slack and use the <em>{{ command }}</em> slash command to search for documents without leaving your chat.",
-  "This will remove the Outline slash command from your Slack workspace. Are you sure?": "This will remove the Outline slash command from your Slack workspace. Are you sure?",
+  "This will remove the Outline slash command from your Slack workspace. Are you sure?": "This will remove the IMC KMS slash command from your Slack workspace. Are you sure?",
   "Connect {{appName}} collections to Slack channels. Messages will be automatically posted to Slack when documents are published or updated.": "Connect {{appName}} collections to Slack channels. Messages will be automatically posted to Slack when documents are published or updated.",
   "Comment by {{ author }} on \"{{ title }}\"": "Comment by {{ author }} on \"{{ title }}\"",
   "How to use {{ command }}": "How to use {{ command }}",
